Fixes the button cut off

--- a/source/_assets/sass/_banner.scss
+++ b/source/_assets/sass/_banner.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	display: flex;
 	flex-wrap: wrap;
-	height: 60vh;
+	min-height: 60vh;
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
@@ -31,12 +31,17 @@
 	position: relative;
 	text-align: center;
 
-	@media screen and (max-width: $sm) {
+	@media screen and (max-width: $md) {
 		font-size: 0.5em;
 	}
 
 	p {
 		margin-bottom: 1em;
+		font-size: 1.5em;
+
+		@media screen and (max-width: $md) {
+			font-size: 2em;
+		}
 	}
 }
 
