--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -13,7 +13,7 @@ $color-orange: #d04428; // Adjusted for AA accessibility
 $xs: 500px;
 $sm: 768px;
 // Todo: set these
-$md: 768px;
+$md: 992px;
 $lg: 768px;
 $xl: 768px;
 
